# GameSync

./: .gitignore  README.md
.github/workflows/: ci.yml
3ds/: Makefile  README.md  build_cia.sh  cia.rsf
3ds/include/: card_spi.h
3ds/source/: archive.h  bundle.c  bundle.h  card_spi.c  config.h  main.c  nds.c  nds.h  network.c  network.h  sync.c  sync.h  title.c  title.h  ui.c  ui.h  update.c  update.h
android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
client/include/: common.h
client/source/: archive.c  config.c  config.h  sync.c
desktop/: chd_converter.py  config.py  main.py  mister_ssh.py  pyproject.toml  requirements.txt  rom_collection.py  rom_normalizer.py  saroo_format.py  sync_engine.py  systems.py  test_sync_compare.py  test_sync_nointro.py  window.py
desktop/dialogs/: config_dialog.py  history_dialog.py  profile_dialog.py
desktop/tabs/: mister_tab.py  normalizer_tab.py  profiles_tab.py  rom_collection_tab.py  server_saves_tab.py  sync_tab.py
desktop/tests/: conftest.py  test_build_collection_chd.py  test_chd_converter.py  test_main.py  test_profile_dialog.py  test_ps3_downloads.py  test_rom_collection.py  test_rom_collection_tab.py  test_saroo_format.py  test_serial_lookup.py  test_sync_compare.py  test_sync_nointro.py  test_sync_tab.py
desktop/tools/: mega_everdrive_diag.py
docs/: ps1-sync.md  ps3-sync.md  sync-profiles.md  technical-overview.md
ds/: README.md
mister/: sync_saves.sh  systems.json
ps3/: Makefile  README.md
psp/: Makefile  README.md
server/: 3dssync@.service  README.md  backup_saves.sh  convert_dbs.py  migrate_platform_to_ps1.py  migrate_ps1_vmp_to_mcd.py  migrate_saves.py  migrate_to_sqlite.py  split_unsorted.py
shared/: __init__.py  generate_json.py  mister.py  rom_id.py  sync_id.py  systems.json  systems.py
steamdeck/: README.md  config.py  download_manager.py  launch.sh  main.py  pyproject.toml  requirements.txt  saturn_format.py  sync_client.py
tools/: psp_sync.py  pyproject.toml  rom_normalizer.py  save_manager.py  sync_engine.py  vita_sync.py
vita/: CMakeLists.txt  README.md  build.sh  deploy.py  fetch_diag.py
vita/include/: bundle.h  common.h  config.h  network.h  saves.h  sync.h  ui.h
vita/sce_sys/livearea/contents/: template.xml
vita/source/: bundle.c  config.c  main.c  network.c  saves.c  sha256.c  sync.c  ui.c
xbox/: .gitignore  Makefile  build.sh
(+264 files in other folders)
